[package]
name = "oldbench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scylla = { git = "https://github.com/cvybhu/scylla-rust-driver", branch = "lbbench-before" }
tracing-subscriber = { version = "0.3.14", features = ["env-filter"] }
stats_alloc = "0.1"
anyhow = "1.0.33"
tokio = {version = "1.1.0", features = ["full"]}
clap = { version = "3.2.4", features = ["derive"] }
