[package]
name = "setup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.33"
scylla = "0.7"
tokio = {version = "1.1.0", features = ["full"]}
clap = { version = "3.2.4", features = ["derive"] }